# Automotive-Zonal-Architecture-Compiler-ZAC-

./: .gitignore  README.md  main.py  out.json  pyproject.toml
docs/: architecture.md  project_scope.md
examples/: sample_modules.json  sample_requirements.json  sample_zones.json
zac/: __init__.py  __main__.py  cli.py
zac.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
zac/cli/: __init__.py
zac/compiler/: __init__.py  generator.py  loader.py  model.py  scorer.py
zac/optimizer/: __init__.py
zac/optimizer/optimizer_core/: Cargo.toml
zac/optimizer/optimizer_core/src/: lib.rs
